--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "treepy"]
 	path = site-lisp/extensions/treepy
 	url = https://github.com/volrath/treepy.el.git
+[submodule "emms"]
+	path = site-lisp/extensions/emms
+	url = https://git.savannah.gnu.org/git/emms.git
