--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "projectile"]
 	path = site-lisp/extensions/projectile
 	url = https://github.com/bbatsov/projectile.git
+[submodule "paredit"]
+	path = site-lisp/extensions/paredit
+	url = http://mumble.net/~campbell/git/paredit.git/
