--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "awesome-tab"]
 	path = site-lisp/extensions/awesome-tab
 	url = https://github.com/manateelazycat/awesome-tab.git
+[submodule "ace-jump"]
+	path = site-lisp/extensions/ace-jump-mode
+	url = https://github.com/winterTTr/ace-jump-mode.git
