--- a/.gitmodules
+++ b/.gitmodules
@@ -31,9 +31,6 @@
 [submodule "projectile"]
 	path = site-lisp/extensions/projectile
 	url = https://github.com/bbatsov/projectile.git
-[submodule "paredit"]
-	path = site-lisp/extensions/paredit
-	url = http://mumble.net/~campbell/git/paredit.git/
 [submodule "pyim"]
 	path = site-lisp/extensions/pyim
 	url = https://github.com/tumashu/pyim.git
@@ -139,3 +136,6 @@
 [submodule "emacs-websocket"]
 	path = site-lisp/extensions/emacs-websocket
 	url = https://github.com/ahyatt/emacs-websocket.git
+[submodule "awesome-pair"]
+	path = site-lisp/extensions/awesome-pair
+	url = https://github.com/manateelazycat/awesome-pair.git
