--- a/.gitmodules
+++ b/.gitmodules
@@ -154,9 +154,6 @@
 [submodule "treemacs"]
 	path = site-lisp/extensions/treemacs
 	url = https://github.com/Alexander-Miller/treemacs.git
-[submodule "auto-save"]
-	path = site-lisp/extensions/auto-save
-	url = https://github.com/manateelazycat/auto-save.git
 [submodule "spinner"]
 	path = site-lisp/extensions/spinner
 	url = https://github.com/Malabarba/spinner.el.git
@@ -166,3 +163,6 @@
 [submodule "flow-minor-mode"]
 	path = site-lisp/extensions/flow-minor-mode
 	url = https://github.com/an-sh/flow-minor-mode.git
+[submodule "super-save"]
+	path = site-lisp/extensions/super-save
+	url = https://github.com/bbatsov/super-save.git
