Reduce init time.
- Increased garbage collection threshold during init to avoid interruptions.
- Applied `use-package' to lazy load packages.
- Removed `flow-minor-mode', rarely used now.
- Removed `y' in view-mode-map, caused error "Symbol’s value as variable is void: view-mode-map".

--- a/.gitmodules
+++ b/.gitmodules
@@ -151,9 +151,6 @@
 [submodule "mocha-snippets"]
 	path = site-lisp/extensions/mocha-snippets
 	url = https://github.com/cowboyd/mocha-snippets.el.git
-[submodule "flow-minor-mode"]
-	path = site-lisp/extensions/flow-minor-mode
-	url = https://github.com/an-sh/flow-minor-mode.git
 [submodule "super-save"]
 	path = site-lisp/extensions/super-save
 	url = https://github.com/bbatsov/super-save.git
@@ -187,3 +184,6 @@
 [submodule "xr"]
 	path = site-lisp/extensions/xr
 	url = https://github.com/mattiase/xr.git
+[submodule "use-package"]
+	path = site-lisp/extensions/use-package
+	url = https://github.com/jwiegley/use-package.git
