Added smart-shift and self defined function for indentation based shifting and code folding.

--- a/.gitmodules
+++ b/.gitmodules
@@ -178,3 +178,6 @@
 [submodule "pinyinlib"]
 	path = site-lisp/extensions/pinyinlib
 	url = https://github.com/cute-jumper/pinyinlib.el.git
+[submodule "smart-shift"]
+	path = site-lisp/extensions/smart-shift
+	url = https://github.com/hbin/smart-shift.git
